--- a/src/app/views/question/question.html
+++ b/src/app/views/question/question.html
@@ -11,7 +11,7 @@
         <p ng-class="{'active': index == question.activeResponse}" ng-click="question.goToNext(index)">{{response.value}}</p>
       </div>
     </div>
-    <p><button type="button" class="btn btn-default back-btn" ng-click="question.goToBack()" ng-if="question.id > 0"><i class="icon-back"></i>Previous</button></p>
+    <p><button type="button" class="btn btn-default back-btn" ng-click="question.goToBack()" ng-if="question.id > 0"><i class="Quiz-icon icon-back"></i>Previous</button></p>
     <p>
       <small>© 2016, Play Quizzy</small>
     </p>
