--- a/src/app/views/product/product.html
+++ b/src/app/views/product/product.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 
   <div class="jumbotron text-center">
  
@@ -7,14 +7,16 @@
     <h2>Your result</h2>
 
 <div class="row" >
-  <div class="col-xs-6 col-sm-4 col-md-3" ng-repeat="products in product.products  | limitTo: product.paginationLimit()" >
+  <div class="col-xxs-12 col-xs-6  col-sm-4 col-md-3" ng-repeat="products in product.products  | limitTo: product.paginationLimit()" >
     <div class="thumbnail">
       <img ng-src="{{products.image}}"  class="productImage"  >
       <div  >
         <h4>{{products.name}}</h4>
-        <p>                    <button type="button " class="btn btn-success ">
+        <p>                    <div><button type="button " class="btn btn-success ">
 <i class="Quiz-icon icon-shopping"></i>
-        Buy now</button>
+        Buy now</button></div>
+        
+        <button type="button" class="btn btn-md btn-default" ng-click="product.inviteFriends()">Share with Friends</button>
 </p>
       </div>
     </div>
