--- a/src/app/views/question/question.html
+++ b/src/app/views/question/question.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-  <div class="jumbotron text-center">
+  <div class="jumbotron text-center" ng-if="!question.chooseGender">
     <h2>Question {{question.activeQuestion}}/{{question.totalNumber}}</h2>
     <img ng-src="{{question.image}}" class="myImage" ng-if="question.image">
     <p class="lead">
@@ -15,6 +15,17 @@
     <p>
       <small>© 2016, Play Quizzy</small>
     </p>
+  </div>
+  <div class="jumbotron text-center gender-choose" ng-if="question.chooseGender">
+    <h2>Select your gender</h2>
+    <div class="col-xs-6" ng-click="question.selectGender('male')">
+      <p>Male</p>
+      <img src="assets/images/male.png">
+    </div>
+    <div class="col-xs-6" ng-click="question.selectGender('female')">
+      <p>Female</p>
+      <img src="assets/images/female.png">
+    </div>
   </div>
 
 </div>
