--- a/src/app/views/result/result.html
+++ b/src/app/views/result/result.html
@@ -7,12 +7,11 @@
       <p>Calculating ...</p>  
     </div>
     <div class="row" ng-if="!result.isLoading">
-      <img ng-src="{{result.image}}" class="myImage col-xs-12 col-sm-6">
+      <img ng-src="{{result.image}}" class="myImage col-xs-12 col-sm-6 result-image">
       <div class="col-xs-12 col-sm-6">
         <img ng-src="{{user.picture.data.url}}">
         <h3>{{result.name}}</h3>
-        <p>
-          {{result.description}}
+        <p ng-bind-html="result.description" class="description">
         </p>
         <div><button type="button" class="btn btn-md btn-primary" ng-click="result.share()">Share</button></div>
         <button type="button" class="btn btn-md btn-default" ng-click="result.inviteFriends()">Invite your Friends</button>
@@ -22,7 +21,7 @@
     <h2>Your result</h2>
 
 <div class="row" >
-  <div class="col-xs-6 col-sm-4 col-md-3" ng-repeat="products in result.products" ng-if="$index<4">
+  <div class="col-xs-6 col-sm-4 col-md-3" ng-repeat="products in result.products">
     <div class="thumbnail">
       <img ng-src="{{products.image}}"  class="productImage"  >
       <div  >
