--- a/src/app/scss/myStyle.scss
+++ b/src/app/scss/myStyle.scss
@@ -1,6 +1,9 @@
 html{
 	background: #f8f9fb;
 }
+h3{
+	font-weight:bold;
+}
 body{
 	background-image: url("../assets/images/background.jpg");
     background-size: cover;
