--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -1,10 +1,13 @@
 <div class="container">
 
   <div class="jumbotron text-center">
-    <h1>Quiz Title</h1>
+    <h1>Clothing Style Personality</h1>
     <img src="assets/images/quizzImage.png" class="myImage">
     <p class="lead">
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut lorem scelerisque, semper ante nec, tempus odio. Aenean sed imperdiet lorem. Phasellus velit diam, molestie at nibh quis, molestie tincidunt dui. 
+      Wearing clothes that suit your personality will ensure that you are always comfortable and confident in how you appear.  Knowing how to adjust personal style to suit many different occasions will separate you from everyone else who simply picks up the closest pieces or what is in fashion with no regard for the finished impression.
+    </p>
+    <p class="lead">
+      At the end of this quiz you will discover your personality.  Your top personality is how you present yourself most days.
     </p>
     <div class="infoUser">
       <img ng-src="{{user.picture.data.url}}">
