--- a/src/app/views/product/product.html
+++ b/src/app/views/product/product.html
@@ -6,18 +6,22 @@
 <div >
     <h2>Your result</h2>
 
-<div class="row" >
-  <div class="col-xxs-12 col-xs-6  col-sm-4 col-md-3" ng-repeat="products in product.products  | limitTo: product.paginationLimit()" >
+<div class="row" masonry load-images="true" >
+  <div class="col-xxs-12 col-xs-6  col-sm-4 col-md-3 masonry-brick" ng-repeat="products in product.products  | limitTo: product.paginationLimit()" >
     <div class="thumbnail">
       <img ng-src="{{products.image}}"  class="productImage"  >
       <div  >
         <h4>{{products.name}}</h4>
-        <p>                    <div><button type="button " class="btn btn-success ">
-<i class="Quiz-icon icon-shopping"></i>
-        Buy now</button></div>
+        <p>
+        <div>
+          <a href="{{products.url}} " class="btn btn-success " target="_blank">
+            <i class="Quiz-icon icon-shopping"></i>
+            Buy now
+          </a>
+        </div>
         
-        <button type="button" class="btn btn-md btn-default" ng-click="product.inviteFriends()">Share with Friends</button>
-</p>
+          <button type="button" class="btn btn-md btn-default" ng-click="product.inviteFriends()">Share with Friends</button>
+        </p>
       </div>
     </div>
   </div>
