Facebook Share and Wording

--- a/src/app/scss/myStyle.scss
+++ b/src/app/scss/myStyle.scss
@@ -4,6 +4,10 @@ html{
 h3, h2{
 	font-weight:bold;
 }
+.h4-subtitle{
+	margin: 50px 0 20px 0;
+    font-size: 20px;
+}
 body{
 	background-image: url("../assets/images/background.jpg");
     background-size: cover;
