--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -7,7 +7,7 @@
       Wearing clothes that suit your personality will ensure that you are always comfortable and confident in how you appear.  Knowing how to adjust personal style to suit many different occasions will separate you from everyone else who simply picks up the closest pieces or what is in fashion with no regard for the finished impression.
     </p>
     <p class="lead">
-      At the end of this quiz you will discover your personality.  Your top personality is how you present yourself most days.
+      At the end of this quiz you will discover your fashion personality.  Your top personality is how you present yourself most days.
     </p>
     <div class="infoUser">
       <img ng-src="{{user.picture.data.url}}">
