--- a/src/app/views/result/result.html
+++ b/src/app/views/result/result.html
@@ -15,10 +15,11 @@
         </p>
         <div><button type="button" class="btn btn-md btn-primary" ng-click="result.share()">Share</button></div>
         <button type="button" class="btn btn-md btn-default" ng-click="result.inviteFriends()">Invite your Friends</button>
+        <button type="button" class="btn btn-default " ng-click="result.restart()">Restart</button>
       </div>
 </div>
       <div  ng-if="!result.isLoading" >
-    <h2>Your result</h2>
+    <h4 class="h4-subtitle">Recommendations for {{result.name}}</h4>
 
 <div class="row" >
   <div class="col-xs-6 col-sm-4 col-md-3" ng-repeat="products in result.products">
@@ -27,8 +28,8 @@
       <div  >
         <h4>{{products.name}}</h4>
         <p>
-        <button type="button " class="btn btn-success "><i class="Quiz-icon icon-shopping"></i> Buy now</button>
-        <button type="button" class="btn btn-md btn-default" ng-click="result.inviteFriends()">Share with Friends</button>
+        <a href="{{products.url}}" class="btn btn-success " target="_blank"><i class="Quiz-icon icon-shopping"></i> Buy now</a>
+        <button type="button" class="btn btn-md btn-default" ng-click="result.inviteFriends(products.url)">Share with Friends</button>
         </p>
       </div>
     </div>
