--- a/src/app/scss/myStyle.scss
+++ b/src/app/scss/myStyle.scss
@@ -8,6 +8,14 @@ h3, h2{
 	margin: 50px 0 20px 0;
     font-size: 20px;
 }
+.newsletter{
+	max-width: 400px;
+	margin:auto;
+	margin-bottom:30px;
+	p{
+		font-size:15px;
+	}
+}
 body{
 	background-image: url("../assets/images/background.jpg");
     background-size: cover;
