--- a/src/app/scss/myStyle.scss
+++ b/src/app/scss/myStyle.scss
@@ -35,6 +35,26 @@ p.description{
 		margin-top:30px;
 	}
 }
+.error-wrapper{
+	input{
+		border : 1px solid red;
+	}
+	button{
+		border-bottom-color: red;
+		border-top-color: red;
+		border-right-color: red;
+	}
+}
+.loader-email{
+	.loader{
+		max-width:30px;
+	}
+}
+.error{
+	margin-top:10px;	
+	color:red;
+	display:inline-block;
+}
 .border-response-img{
 	border: 1px solid #000000;
 
@@ -53,6 +73,9 @@ padding-top: 10px;
 	.btn{
 		max-width: 100%;
     	overflow: hidden;
+	}
+	& > img, h4{
+		cursor:pointer;
 	}
 }
 .container .jumbotron, .container-fluid .jumbotron{
