--- a/src/app/scss/myStyle.scss
+++ b/src/app/scss/myStyle.scss
@@ -1,5 +1,6 @@
 html{
 	background: #f8f9fb;
+	font-famile:'Arial'
 }
 h3, h2{
 	font-weight:bold;
@@ -77,6 +78,9 @@ padding-top: 10px;
 	& > img, h4{
 		cursor:pointer;
 	}
+}
+.jumbotron p{
+	font-weight: normal;
 }
 .container .jumbotron, .container-fluid .jumbotron{
 	background-color: transparent;
@@ -208,7 +212,9 @@ small{
  }
 
 @media  (max-width: 768px){
-
+	.response-item p{
+		width:100%;
+	}
 	.myImage{
 		max-width: 100%;
 	}
