--- a/src/app/views/product/product.html
+++ b/src/app/views/product/product.html
@@ -7,7 +7,7 @@
     <h2>Recommendations for {{product.name}}</h2>
 
 <div class="row" masonry load-images="true" >
-  <div class="col-xxs-12 col-xs-6  col-sm-4 col-md-3 masonry-brick" ng-repeat="products in product.products  | limitTo: product.paginationLimit()" >
+  <div class="col-xs-12 col-sm-4 col-md-3 masonry-brick" ng-repeat="products in product.products  | limitTo: product.paginationLimit()" >
     <div class="thumbnail">
       <img ng-src="{{products.image}}"  class="productImage"  ng-click="product.goToAmazon(products.url)">
       <div  >
