--- a/src/app/views/result/result.html
+++ b/src/app/views/result/result.html
@@ -21,8 +21,8 @@
   <div  ng-if="!result.isLoading" >
     <h4 class="h4-subtitle">Recommendations for {{result.name}}</h4>
 
-<div class="row" >
-  <div class="col-xs-6 col-sm-4 col-md-3" ng-repeat="products in result.products">
+<div class="row" masonry load-images="true">
+  <div class="col-xs-12 col-sm-4 col-md-3 masonry-brick" ng-repeat="products in result.products">
     <div class="thumbnail">
       <img ng-src="{{products.image}}"  class="productImage" ng-click="result.goToAmazon(products.url)" >
       <div  >
@@ -43,7 +43,7 @@
   <p>To receive more informations about your clothing Personality and recommendations for your Fashion style subscribe to our Newsletter</p>
     <form name="newsletterForm" ng-submit="newsletterForm.$valid && result.subscribe()" novalidate>
       <div class="input-group" ng-class="{'error-wrapper': newsletterForm.$submitted && newsletterForm.email.$invalid}">
-        <input name="email" type="email" class="form-control" placeholder="Email" ng-model="product.email" required>
+        <input name="email" type="email" class="form-control" placeholder="Email" ng-model="result.email" required>
         <div class="input-group-btn">
           <button type="submit" class="btn btn-default">Subscribe</button>
         </div>
@@ -53,7 +53,8 @@
           <div class="loader-email" ng-if="result.emailLoading">
             <img src="assets/images/loading.gif" class="loader">  
           </div>
-          <span ng-style="product.style">{{product.displayMessage}}</span>
+          <span ng-style="result.style">{{result.displayMessage}}</span>
+
       </form>
 </div>
 
