--- a/src/app/views/product/product.html
+++ b/src/app/views/product/product.html
@@ -14,13 +14,13 @@
         <h4 ng-click="product.goToAmazon(products.url)">{{products.name}}</h4>
         <p>
         <div>
-          <a href="{{products.url}} " class="btn btn-success " target="_blank">
+          <a ng-click="product.goToAmazon(products.url)" class="btn btn-success " target="_blank">
             <i class="Quiz-icon icon-shopping"></i>
             Buy now
           </a>
         </div>
         
-          <button type="button" class="btn btn-md btn-default" ng-click="product.inviteFriends()">Share with Friends</button>
+          <button type="button" class="btn btn-md btn-default" ng-click="product.inviteFriends(products.url)">Share with Friends</button>
         </p>
       </div>
     </div>
