--- a/src/app/views/main/main.html
+++ b/src/app/views/main/main.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="jumbotron text-center">
-    <h1>Clothing Style Personality</h1>
+    <h1>Clothing Personality</h1>
     <img src="assets/images/quizzImage.png" class="myImage">
     <p class="lead">
       Wearing clothes that suit your personality will ensure that you are always comfortable and confident in how you appear.  Knowing how to adjust personal style to suit many different occasions will separate you from everyone else who simply picks up the closest pieces or what is in fashion with no regard for the finished impression.
