--- a/src/app/scss/myStyle.scss
+++ b/src/app/scss/myStyle.scss
@@ -9,6 +9,25 @@ h3, h2{
 	margin: 50px 0 20px 0;
     font-size: 20px;
 }
+.banner{
+	background-color: white;
+    padding: 10px 0;
+    text-align: center;
+    box-shadow: 0px 0px 3px 0px #c1c1c1;
+    img{
+    	width: 65px;
+    }
+}
+.facebook{
+    display: inline-block;
+    background-image: url(../assets/images/facebook.png);
+    width: 25px;
+    height: 25px;
+    background-size: 100%;
+    float: right;
+    margin-top: 33px;
+    margin-right: 30px;
+}
 .newsletter{
 	max-width: 400px;
 	margin:auto;
